# mlex_mlcoach

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  frontend.py  gunicorn_config.py  pyproject.toml  requirements.txt
.github/workflows/: publish_docker.yml  test-lint.yml
docker/: Dockerfile  requirements.txt
docs/: concepts.md  tasks.md
models/: Makefile  Tensorflow-NN_v1.0.0-2.json  main.cfg  train_model.json
models/docker/: Dockerfile  Dockerfile_arm64  Dockerfile_gpu  requirements.txt  requirements_arm64.txt
models/old_json_files/: evaluate_model.json  kwarg_editor.py  prediction_model.json  train_model.json
models/src/: evaluate_model.py  helper_utils.py  model_validation.py  predict_model.py  train_model.py  transfer_learning.py
src/: app_layout.py  file_manager.py  frontend.py  helpers.py  kwarg_editor.py  main.cfg  targeted_callbacks.py  templates.py
src/assets/: default_models.json  image_transformation.js  mlex-style.css
src/callbacks/: display.py  download.py  execute.py  infrastructure_check.py  load_labels.py  load_parameters.py  table.py
src/components/: header.py  infrastructure.py  job_table.py  loss.py  main_display.py  resources_setup.py  sidebar.py  training_stats.py
src/utils/: data_utils.py  job_utils.py  label_utils.py  mask_utils.py  model_utils.py  plot_utils.py  prefect.py
